--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <div class="container">
             <div class="header__inner">
                 <button class="burger-btn">
-                    <img class="burger-btn__logo"
-                    src="./images/burger-btn.svg" 
-                    alt="Burger Btn">
+                    <img class="burger-btn__logo" src="./images/burger-btn.svg" alt="Burger Btn">
                 </button>
                 <a class="logo__link" href="./index.html">
                     <img class="logo" src="./images/scoot-header.svg" alt="Site Logo">
@@ -37,7 +35,7 @@
                         </li>
                     </ul>
                 </nav>
-                
+
                 <div class="nav__btn">
                     <a href="#" class="btn__link">Get Scootin</a>
                 </div>
@@ -51,7 +49,9 @@
                 <div class="scooter-inner">
                     <h1 class="scooter__title">Scooter sharing made simple</h1>
                     <div class="scooter__content">
-                        <p class="scooter__text">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
+                        <p class="scooter__text">Scoot takes the hassle out of urban mobility. Our bikes are placed in
+                            convenient locations in each of our cities. Use our app to locate the nearest bike, unlock
+                            it with a tap, and you’re away!</p>
                         <a class="scooter__link" href="#">Get Scootin</a>
                     </div>
                 </div>
@@ -64,23 +64,133 @@
                     <ul class="express__list">
                         <li class="express__item">
                             <h3 class="express__title">Locate with app</h3>
-                            <p class="express__text">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                            <p class="express__text">Use the app to find the nearest scooter to you. We are continuously
+                                placing scooters in the areas with most demand, so one should never be too far away.
+                            </p>
                         </li>
 
                         <li class="express__item">
                             <h3 class="express__title">Pick your scooter</h3>
-                            <p class="express__text">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost.</p>
+                            <p class="express__text">We show the most important info for the scooters closest to you. So
+                                you know how much charge they have left and can see roughly how much it will cost.</p>
                         </li>
 
                         <li class="express__item">
                             <h3 class="express__title">Enjoy the ride</h3>
-                            <p class="express__text">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps.</p>
+                            <p class="express__text">Scan the QR code and the bike will unlock. Retract the cable lock,
+                                put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility
+                                ramps.</p>
                         </li>
                     </ul>
                 </div>
             </div>
         </section>
+
+        <section class="expending">
+            <div class="expending-inner">
+                <div class="container">
+                    <div class="expending__content">
+                        <h2 class="expending__title">Easy to use riding telemetry</h2>
+                        <p class="expending__text">The Scoot app is available with riding telemetry. This means it
+                            can show you your average speed, how long you've been using the scooter, your traveling
+                            distance, and many more things all in an easy to use app.</p>
+                        <a href="#" class="btn__link">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="expending-inner">
+                <div class="container">
+                    <div class="expending__content right-content">
+                        <h2 class="expending__title">Coming to a city near you</h2>
+                        <p class="expending__text">Scoot is available in 4 major cities so far. We’re expanding
+                            rapidly, so be sure to let us know if you want to see us in your hometown. We’re
+                            aiming
+                            to let our scooters loose on 23 cities over the coming year.</p>
+                        <a href="#" class="btn__link">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="expending-inner">
+                <div class="container">
+                    <div class="expending__content">
+                        <h2 class="expending__title">Zero hassle payments</h2>
+                        <p class="expending__text">Our payment is as easy as one two three. We accept most
+                            credit
+                            cards and debit cards. You can also link your PayPal account inside the app. Need to
+                            pay
+                            later? No worries! You can defer payment for up to a month.</p>
+                        <a href="#" class="btn__link">Learn More</a>
+                     </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-inner">
+            <div class="container">
+                <div class="footer__top">
+                    <div class="footer__top-title">
+                        <strong class="top-title">Sign up and Scoot off today</strong>
+                    </div>
+                    <div class="footer__top-links">
+                        <a class="top-link" href="https://www.apple.com/app-store/" target="_blank">
+                            <img class="top-link-logo" src="./images/AppStore.svg" alt="AppStore" 
+                            width="130" 
+                            height="40">
+                        </a>
+                        <a class="top-link" href="https://play.google.com/store/games?hl=ru&gl=US" target="_blank">
+                            <img class="top-link-logo" src="./images/GooglePlay.svg" alt="GooglePlay" 
+                            width="130" 
+                            height="40">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-navigation">
+                <div class="container">
+                    <div class="footer__bottom">
+                        <a class="footer-logo" href="./index.html">
+                            <img src="./images/scoot-footer.svg" alt="Site Logo">
+                        </a>
+
+                        <nav class="footer-nav">
+                            <ul class="footer-nav__list">
+                                <li class="footer-nav__item">
+                                    <a href="#" class="footer-nav__link">About</a>
+                                </li>
+
+                                <li class="footer-nav__item">
+                                    <a href="#" class="footer-nav__link">Location</a>
+                                </li>
+
+                                <li class="footer-nav__item">
+                                    <a href="#" class="footer-nav__link">Careers</a>
+                                </li>
+                            </ul>
+                        </nav>
+
+                        <div class="social-networks"> 
+                            <a class="social-networks__link" href="https://www.facebook.com/" target="_blank">
+                                <img src="./images/facebook.svg" alt="facebook">
+                            </a>
+
+                            <a class="social-networks__link" href="https://www.twitter.com/" target="_blank">
+                                <img src="./images/twitter.svg" alt="twitter">
+                            </a>
+
+                            <a class="social-networks__link" href="https://www.instagram.com/" target="_blank">
+                                <img src="./images/instagram.svg" alt="instagram">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
